update to the qr code gui to keep a log of which codes were detected.