@@ -1,24 +1,50 @@
 package org.myrobotlab.opencv;
 
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
 
-import org.myrobotlab.service.OpenCV;
+import org.myrobotlab.codec.CodecUtils;
 
 /**
  * Aggregates {@link OpenCVFilter#catalogInfo()} from each filter class listed
- * in {@link OpenCV#POSSIBLE_FILTERS}. Used by WebGui and
+ * in {@link #POSSIBLE_FILTERS}. Used by WebGui and
  * {@code OpenCV.getPossibleFilterInfo()}.
  * <p>
  * Types with no {@code OpenCVFilter*} class (legacy names) have fallback copy
  * here so the UI can still explain why addFilter will fail.
+ * <p>
+ * Class initialization of some filters loads JavaCV natives. This aggregator
+ * does not initialize those classes when it can avoid it, and falls back to
+ * {@code resource/OpenCV/filter-catalog.json} if native load fails (e.g. CI).
  */
 public class OpenCVFilterCatalog {
 
+  /**
+   * Canonical filter type names shown in the WebGui. Keep in sync with
+   * {@code OpenCV.POSSIBLE_FILTERS} (that field aliases this array).
+   */
+  public static final String[] POSSIBLE_FILTERS = { "AdaptiveThreshold", "AddMask", "Affine", "And", "BlurDetector",
+      "BoundingBoxToFile", "Canny", "ColorTrack", "Copy", "CreateHistogram", "Detector", "Dilate", "DL4J", "DL4JTransfer",
+      "Erode", "FaceDetect", "FaceDetectDNN", "FaceDetectYN", "FaceRecognizer", "FaceTraining", "Fauvist", "FindContours",
+      "Flip", "FloodFill", "FloorFinder", "FloorFinder2", "GoodFeaturesToTrack", "Gray", "HoughLines2", "Hsv",
+      "ImageSegmenter", "Input", "InRange", "Invert", "KinectDepth", "KinectDepthMask", "KinectNavigate",
+      "KinectPointCloud", "LKOpticalTrack", "Lloyd", "Mask", "MatchTemplate", "MiniXception", "MotionDetect", "Mouse",
+      "Ocr", "Output", "Overlay", "PyramidDown", "PyramidUp", "QrCode", "ResetImageRoi", "Resize", "SampleArray",
+      "SampleImage", "SetImageROI", "SimpleBlobDetector", "Smooth", "Solr", "Split", "SURF", "Tesseract", "TextDetector",
+      "Threshold", "Tracker", "Transpose", "Undistort", "Yolo", "YoloOnnx", "DepthToPointCloud" };
+
   private static final String FILTER_PACKAGE = "org.myrobotlab.opencv.OpenCVFilter";
 
+  private static final String JSON_RESOURCE = "/resource/OpenCV/filter-catalog.json";
+
   private static final Map<String, OpenCVFilterInfo> MISSING_TYPES = new LinkedHashMap<>();
+
+  private static volatile Map<String, OpenCVFilterInfo> jsonCatalog;
 
   static {
     MISSING_TYPES.put("DL4J", OpenCVFilterInfo.of("DL4J",
@@ -41,7 +67,7 @@ public class OpenCVFilterCatalog {
 
   public static Map<String, OpenCVFilterInfo> getAll() {
     LinkedHashMap<String, OpenCVFilterInfo> catalog = new LinkedHashMap<>();
-    for (String type : OpenCV.POSSIBLE_FILTERS) {
+    for (String type : POSSIBLE_FILTERS) {
       catalog.put(type, get(type));
     }
     return Collections.unmodifiableMap(catalog);
@@ -51,17 +77,136 @@ public class OpenCVFilterCatalog {
     if (type == null) {
       return null;
     }
+    OpenCVFilterInfo live = lookupLive(type);
+    if (isComplete(live)) {
+      return live;
+    }
+    OpenCVFilterInfo fromJson = jsonEntry(type);
+    if (isComplete(fromJson)) {
+      return fromJson;
+    }
+    if (live != null) {
+      return live;
+    }
+    return MISSING_TYPES.get(type);
+  }
+
+  /**
+   * Reads {@code catalogInfo()} from the filter class. Native {@code Loader.load}
+   * in a static initializer runs when the method is invoked; failures return
+   * null so {@link #get(String)} can use the JSON resource instead of the
+   * generic {@link OpenCVFilter#lookupCatalogInfo} fallback.
+   */
+  private static OpenCVFilterInfo lookupLive(String type) {
     try {
-      Class<?> clazz = Class.forName(FILTER_PACKAGE + type);
-      if (!OpenCVFilter.class.isAssignableFrom(clazz)) {
-        return MISSING_TYPES.get(type);
+      Class<?> clazz = Class.forName(FILTER_PACKAGE + type, false, OpenCVFilterCatalog.class.getClassLoader());
+      java.lang.reflect.Method m = clazz.getDeclaredMethod("catalogInfo");
+      if (!java.lang.reflect.Modifier.isStatic(m.getModifiers()) || m.getParameterCount() != 0) {
+        return null;
       }
-      @SuppressWarnings("unchecked")
-      Class<? extends OpenCVFilter> filterClass = (Class<? extends OpenCVFilter>) clazz;
-      return OpenCVFilter.lookupCatalogInfo(filterClass);
+      m.setAccessible(true);
+      return (OpenCVFilterInfo) m.invoke(null);
     } catch (ClassNotFoundException e) {
       return MISSING_TYPES.get(type);
+    } catch (NoSuchMethodException e) {
+      return MISSING_TYPES.get(type);
+    } catch (Throwable t) {
+      return null;
     }
+  }
+
+  private static boolean isComplete(OpenCVFilterInfo info) {
+    return info != null && !isBlank(info.type) && !isBlank(info.description) && !isBlank(info.usage)
+        && !isBlank(info.dependencies);
+  }
+
+  private static boolean isBlank(String value) {
+    return value == null || value.trim().isEmpty();
+  }
+
+  @SuppressWarnings("unchecked")
+  private static OpenCVFilterInfo jsonEntry(String type) {
+    Map<String, OpenCVFilterInfo> catalog = loadJsonCatalog();
+    if (catalog == null) {
+      return null;
+    }
+    return catalog.get(type);
+  }
+
+  @SuppressWarnings("unchecked")
+  private static Map<String, OpenCVFilterInfo> loadJsonCatalog() {
+    Map<String, OpenCVFilterInfo> cached = jsonCatalog;
+    if (cached != null) {
+      return cached;
+    }
+    synchronized (OpenCVFilterCatalog.class) {
+      if (jsonCatalog != null) {
+        return jsonCatalog;
+      }
+      try {
+        String json = readCatalogJson();
+        if (json == null || json.isBlank()) {
+          jsonCatalog = Collections.emptyMap();
+          return jsonCatalog;
+        }
+        Map<String, Object> raw = CodecUtils.fromJson(json, Map.class);
+        LinkedHashMap<String, OpenCVFilterInfo> parsed = new LinkedHashMap<>();
+        if (raw != null) {
+          for (Map.Entry<String, Object> entry : raw.entrySet()) {
+            parsed.put(entry.getKey(), toInfo(entry.getKey(), entry.getValue()));
+          }
+        }
+        jsonCatalog = Collections.unmodifiableMap(parsed);
+      } catch (Exception e) {
+        jsonCatalog = Collections.emptyMap();
+      }
+      return jsonCatalog;
+    }
+  }
+
+  @SuppressWarnings("unchecked")
+  private static OpenCVFilterInfo toInfo(String key, Object value) {
+    if (value instanceof OpenCVFilterInfo) {
+      return (OpenCVFilterInfo) value;
+    }
+    if (!(value instanceof Map)) {
+      return null;
+    }
+    Map<String, Object> map = (Map<String, Object>) value;
+    OpenCVFilterInfo info = new OpenCVFilterInfo();
+    info.type = stringVal(map.get("type"), key);
+    info.description = stringVal(map.get("description"), null);
+    info.usage = stringVal(map.get("usage"), null);
+    info.dependencies = stringVal(map.get("dependencies"), null);
+    return info;
+  }
+
+  private static String stringVal(Object value, String fallback) {
+    if (value == null) {
+      return fallback;
+    }
+    String text = String.valueOf(value);
+    return text.isEmpty() ? fallback : text;
+  }
+
+  private static String readCatalogJson() throws Exception {
+    InputStream in = OpenCVFilterCatalog.class.getResourceAsStream(JSON_RESOURCE);
+    if (in == null) {
+      in = OpenCVFilterCatalog.class.getClassLoader().getResourceAsStream("resource/OpenCV/filter-catalog.json");
+    }
+    if (in != null) {
+      try (InputStream stream = in) {
+        return new String(stream.readAllBytes(), StandardCharsets.UTF_8);
+      }
+    }
+    Path[] files = new Path[] { Path.of("src/main/resources/resource/OpenCV/filter-catalog.json"),
+        Path.of("resource/OpenCV/filter-catalog.json") };
+    for (Path file : files) {
+      if (Files.isRegularFile(file)) {
+        return Files.readString(file, StandardCharsets.UTF_8);
+      }
+    }
+    return null;
   }
 
   private static String jsonEscape(String value) {
@@ -99,7 +244,7 @@ public class OpenCVFilterCatalog {
   public static void main(String[] args) throws Exception {
     String json = toJson();
     if (args != null && args.length > 0) {
-      java.nio.file.Files.write(java.nio.file.Paths.get(args[0]), json.getBytes(java.nio.charset.StandardCharsets.UTF_8));
+      Files.write(Path.of(args[0]), json.getBytes(StandardCharsets.UTF_8));
     } else {
       System.out.print(json);
     }
